--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.38.0
-pdfminer.six==20231228
+pdfminer-six==20231228
 sentence-transformers==2.6.1
 scikit-learn==1.4.2
 groq==0.9.0
 python-dotenv==1.0.1
 torch==2.2.2
-numpy==1.26.4
+transformers==4.57.3
